--- a/src/app/courses/courses/courses.component.scss
+++ b/src/app/courses/courses/courses.component.scss
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+.loading-spinner {
+  padding: 25px;
+  background-color: rgba($color: #000000, $alpha: 0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
